update commit fiturku

--- a/Tugas14.html
+++ b/Tugas14.html
@@ -11,5 +11,6 @@
     <p>Pada pertemuan ke-14 mata kuliah literasi digital, 
         dosen pengampu tidak dapat mengisi perkuliahan
         sehingga dosen memberikan tugas sebagai ganti perkuliahan.</p>
+    <p>Mahasiswa diminta untuk melakukan praktikum sesuai dengan BKPM yang ada.</p>
 </body>
 </html>
